--- a/pruebas/main.css
+++ b/pruebas/main.css
@@ -54,3 +54,40 @@ ul {
     visibility: visible;
   }
   
+
+  div {
+    background-color: #f2f2f2;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    text-align: center;
+  }
+
+  img {
+    width: 200px;
+    height: auto;
+    margin-bottom: 10px;
+  }
+
+  p {
+    font-size: 16px;
+    color: #333;
+  }
+
+  h1 {
+    font-family: Arial, sans-serif;
+    font-size: 4em;
+    text-align: center;
+    color: #fff;
+    text-shadow: 2px 2px 4px #000;
+    letter-spacing: 2px;
+    margin-top: 50px;
+  }
+  
+  .underline {
+    height: 10px;
+    background-color: #fff;
+    margin: 0 auto;
+    width: 100px;
+    margin-top: 20px;
+  }
