--- a/main.css
+++ b/main.css
@@ -39,7 +39,7 @@
     width: 150px;
     height: 50px;
     padding: 1px;
-    margin-left: 50px;
+    
   
   }
   
@@ -163,12 +163,8 @@
 
   .escuderia{
     display: flex;
-    justify-content: space-between;
-    justify-content: center;
+    justify-content: space-around;
     background-color: white;
-    width: 90%;
-    height: 80%;
-    margin-left: 100px;
     margin-top: 100px;
      
   }
@@ -183,7 +179,7 @@
   }
 
   table{
-    width: 800px;
+    width: auto;
     height: 350px;
     padding: 20px;
     border-radius: 10px;
@@ -198,10 +194,7 @@
     justify-content: space-between;
   }
 
-  .pilotos:hover{
-    background-color: #0d2bb1;
-    color: white;
-  }
+ 
 
   .pilotos {
     background-color: #f2f2f2;
@@ -222,28 +215,34 @@
     color: #333;
   }
   
-  h1 {
-    font-family: Arial, sans-serif;
-    font-size: 6em;
-    text-align: center;
-    color: #fff;
-    text-shadow: 2px 2px 4px #0d2bb1;
-    letter-spacing: 2px;
-    margin-top: 50px;
-  }
-  
-  .underline {
-    height: 10px;
-    background-color: #0d2bb1;
-    margin: 0 auto;
-    width: 300px;
-    margin-top: 20px;
-  }
-
   h4{
     font-size: 3em;
   }
 
+  .piloto_unico{
+    display: flex;
+    background-color: white;
+    justify-content: space-around;
+    margin-top: 100px;
+  }
 
+  .piloto_unico img {
+    width: 200px;
+    height: auto;
+    margin-bottom: 10px;
+  }
 
+  .piloto_unico p {
+    font-size: 50px;
+    color: #333;
+  }
+
+  .imagen_piloto > img{
+    width: 300px;
+    border-radius: 15px;
+  }
+
+  .imagen_piloto div > img{
+    width: 100px;
+  }
   
